[package]
name = "icsql-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
cap-std = "3.4.4"
env_logger = "0.11.8"
libc = "0.2.177"
log = "0.4.28"
nix = { version = "0.30.1", features = ["term", "fs", "signal", "poll"] }
signal-hook = "0.3.18"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
